--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "hafd tad fcydst jdafg fadyf asyudf gfcydsf sadf",
     "main": "server.js",
     "scripts": {
-        "dev": "cross-env nodemon src/server.ts",
-        "start": "cross-env node dist/server.js",
+        "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+        "start": "cross-env NODE_ENV=production node dist/server.js",
         "lint": "eslint",
         "lint:fix": "eslint --fix",
         "format:check": "prettier . --check",
@@ -35,8 +35,20 @@
     "dependencies": {
         "@commitlint/cli": "^19.6.1",
         "@commitlint/config-conventional": "^19.6.0",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/source-map-support": "^0.5.10",
+        "colorette": "^2.0.20",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.3",
-        "dotenv-flow": "^4.1.0"
+        "dotenv-flow": "^4.1.0",
+        "express": "^4.21.2",
+        "helmet": "^8.0.0",
+        "mongodb": "^6.12.0",
+        "mongoose": "^8.9.5",
+        "npm-check-updates": "^17.1.14",
+        "rate-limiter-flexible": "^5.0.5",
+        "source-map-support": "^0.5.21",
+        "winston": "^3.17.0"
     }
 }
-
